[gd_scene load_steps=5 format=3 uid="uid://fscw583q2txi"]

[ext_resource type="Script" path="res://Objects/Trader/Trader.gd" id="1_xoh1p"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_tjuu7"]
size = Vector2(20, 102)

[sub_resource type="LabelSettings" id="LabelSettings_jpemh"]
font_size = 15

[sub_resource type="LabelSettings" id="LabelSettings_s1mkv"]
font_size = 13

[node name="Trader" type="Node2D"]

[node name="Trader" type="Area2D" parent="."]
script = ExtResource("1_xoh1p")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Trader"]
shape = SubResource("RectangleShape2D_tjuu7")

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
shape = SubResource("RectangleShape2D_tjuu7")

[node name="StoreUI" type="Control" parent="."]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 100)
layout_mode = 3
anchors_preset = 0
offset_left = -212.0
offset_top = -96.0
offset_right = 940.0
offset_bottom = 587.0
mouse_filter = 2

[node name="StorePanel" type="Panel" parent="StoreUI"]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.176
anchor_bottom = 0.251
offset_right = -92.752
offset_bottom = -54.858
scale = Vector2(1.8465, 1.47243)

[node name="VBoxContainer" type="VBoxContainer" parent="StoreUI/StorePanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = 0.424973
grow_horizontal = 2
grow_vertical = 2

[node name="Store" type="Label" parent="StoreUI/StorePanel/VBoxContainer"]
layout_mode = 2
text = "STORE"
label_settings = SubResource("LabelSettings_jpemh")
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="StoreUI/StorePanel/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="StoreUI/StorePanel/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "PowerTools"
label_settings = SubResource("LabelSettings_s1mkv")

[node name="Button" type="Button" parent="StoreUI/StorePanel/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "15"

[connection signal="area_entered" from="Trader" to="Trader" method="_on_area_entered"]
[connection signal="area_exited" from="Trader" to="Trader" method="_on_area_exited"]
